<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Call Buster</string>
    <string name="action_settings">Settings</string>

    <string name="btn_blacklist">Blacklist</string>
    <string name="btn_whitelist">Whitelist</string>
    <string name="btn_log">Log</string>

    <string name="title_activity_blacklist">Blacklist</string>
    <string name="title_activity_whitelist">Whitelist</string>
    <string name="title_activity_log">Log</string>

    <string name="title_activity_manage_blacklist">Edit blacklist</string>
    <string name="title_activity_manage_whitelist">Edit whitelist</string>

    <string name="et_block_number_hint">Enter 10 digit number to block</string>
    <string name="et_block_area_code_hint">Enter 3 digit area code to block</string>

    <string name="et_allow_number_hint">Enter 10 digit number to allow</string>
    <string name="et_allow_area_code_hint">Enter 3 digit area code to allow</string>

    <string name="btn_block_number">Block</string>
    <string name="btn_block_area_code">Block</string>

    <string name="btn_allow_number">Allow</string>
    <string name="btn_allow_area_code">Allow</string>

    <string name="btn_manage_blacklist">Edit blacklist</string>
    <string name="btn_manage_whitelist">Edit whitelist</string>

    <string name="btn_acknowledge_warning">Got it</string>

    <string name="btn_clear_log">Clear log</string>

    <string name="tv_blocked_numbers">Blocked numbers</string>
    <string name="tv_blocked_area_codes">Blocked area codes</string>

    <string name="tv_allowed_numbers">Allowed numbers</string>
    <string name="tv_allowed_area_codes">Allowed area codes</string>


    

</resources>