<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">
    <EditText
            android:id="@+id/etBlacklistNumber"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/et_block_number_hint"
            />

    <Button
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/btn_block_number"
            android:onClick="addNumber"
            />

    <EditText
            android:id="@+id/etBlacklistAreaCode"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/et_block_area_code_hint"
            android:layout_marginTop="40sp"/>

    <Button
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/btn_block_area_code"
            android:onClick="addAreaCode"
            />

    <Button
            android:id="@+id/btnManageBlacklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_manage_blacklist"
            android:onClick="startManageBlacklistActivity"
            android:layout_marginTop="160sp"/>

</LinearLayout>