<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:longClickable="false"
    android:baselineAligned="false">


    <Button
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/btn_blacklist"
            android:id="@+id/btnBlacklist"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:onClick="startBlacklistActivity"/>

    <Button
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/btn_whitelist"
            android:id="@+id/btnWhitelist"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:onClick="startWhitelistActivity"/>

    <Button
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/btn_log"
            android:id="@+id/btnLog"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:onClick="startLogActivity"/>

    




</LinearLayout>